--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ greenlet       == 1.0.0
 jsonpickle     == 1.5.1
 numpy          == 1.20.0
 Werkzeug       == 2.0.0
+rpy2
 
 
 # Other libraries requested by students and added to make sure
